Zmiana nr 3, Aktualizacja projektu o przesłane wytyczne, dodanie testó jednostkowych.